--- a/src/turret/form/select.css
+++ b/src/turret/form/select.css
@@ -52,8 +52,8 @@ select {
 
     &:focus {
       color: var(--select-focus-color);
-      background: var(--select-focus-background);
-      border-color: var(--select-focus-border-color);
+      //background: var(--select-focus-background);
+      //border-color: var(--select-focus-border-color);
       box-shadow: var(--select-focus-box-shadow);
       outline: var(--focus-outline);
       outline-offset: var(--focus-outline-offset);
@@ -115,7 +115,7 @@ select {
   &::after {
     position: absolute;
     top: 50%;
-    right: 1em;
+    right: 10px;
     margin-top: calc(var(--select-arrow-size) / -2);
     width: 0;
     height: 0;
