added custom stylus styles and basic files

--- a/src/styl/style.styl
+++ b/src/styl/style.styl
@@ -1,1 +1,8 @@
+// global variables
+$siteWith = 976px
+
+
 @import "general.styl"
+@import "components/transfer-via.styl"
+@import "overrides.styl"
+
