added new submit btn styles

--- a/src/styl/overrides.styl
+++ b/src/styl/overrides.styl
@@ -9,8 +9,20 @@ select.select-xxs
 }
 
 .control.radio input[type=radio]:checked~.control-indicator:before {
-  background rgb(162,200,229);
+  background rgb(162,200,229)
   background -moz-radial-gradient(center, ellipse cover, rgba(162,200,229,1) 5%, rgba(107,176,229,1) 100%)
   background -webkit-radial-gradient(center, ellipse cover, rgba(162,200,229,1) 5%,rgba(107,176,229,1) 100%)
   background radial-gradient(ellipse at center, rgba(162,200,229,1) 5%,rgba(107,176,229,1) 100%)
 }
+
+.button-grey
+  color #353535
+  background #d8d8d8
+  border-color #d8d8d8
+
+.button-grey:active,
+.button-grey:focus,
+.button-grey:hover
+  color #fff
+  background #353535
+  border-color #d8d8d8
