--- a/src/styl/general.styl
+++ b/src/styl/general.styl
@@ -66,5 +66,9 @@
   max-width 195px
   justify-content flex-start
 
-//.transfer-includes .left-column *
-//  width 100%
+.submit-form
+  text-align center
+
+  button
+    width 150px
+    margin 30px 0
