adjust css size as provided "design"

--- a/src/styl/general.styl
+++ b/src/styl/general.styl
@@ -4,22 +4,21 @@
   margin 150px auto
 
 .section
-  padding 0 15px
+  padding 0
 
 .section__title
-  width $siteWith
+  max-width  100%
   background #d8d8d8
-  margin-left -15px
   padding 5px 15px
 
 .section__content
-  padding 30px 50px
+  padding 30px 80px
 
 .section__field
   display flex
   flex-flow row
   align-items center
-  margin 0 0 15px 0
+  margin 0 0 12px 0
 
   .input-name
     font-size 13px
@@ -36,12 +35,12 @@
     margin 0
 
 .transfer-via .section__field .select,
+.transfer-via .section__field .vertical-inputs,
 .transfer-via .section__field .input
   min-width 195px
 
 .transfer-includes .section__field .select
   //max-width 80px
-
 
 .section__field.align-items-top
   align-items flex-start
@@ -71,4 +70,4 @@
 
   button
     width 150px
-    margin 30px 0
+    margin 15px 0 30px 0
