--- a/src/styl/general.styl
+++ b/src/styl/general.styl
@@ -26,6 +26,7 @@
 
   .select,
   .vertical-inputs,
+  .input-group,
   .input
     width 100%
     max-width 195px
@@ -71,3 +72,7 @@
   button
     width 150px
     margin 15px 0 30px 0
+
+.calendar-icon
+  max-height 28px
+  padding: 3px 5px
