--- a/src/turret/utility/flex.css
+++ b/src/turret/utility/flex.css
@@ -1,146 +1,146 @@
 .flex {
-  display: flex;
+  display: flex !important;
 }
 
 .inline-flex {
-  display: inline-flex;
+  display: inline-flex !important;
 }
 
 .flex-justify {
-  display: flex;
-  justify-content: space-between;
+  display: flex !important;
+  justify-content: space-between !important;
 }
 
 .flex-justify-center {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+  display: flex !important;
+  align-items: center !important;
+  justify-content: space-between !important;
 }
 
 .flex-wrap {
-  flex-wrap: wrap;
+  flex-wrap: wrap !important;
 }
 
 .flex-nowrap {
-  flex-wrap: nowrap;
+  flex-wrap: nowrap !important;
 }
 
 .flex-row {
-  flex-direction: row;
+  flex-direction: row !important;
 }
 
 .flex-column {
-  flex-direction: column;
+  flex-direction: column !important;
 }
 
 .flex-1 {
-  flex: 1 1 0px;
+  flex: 1 1 0px !important;
 }
 
 .flex-auto {
-  flex: auto; /* Equal to flex: 1 1 auto; as per the spec */
+  flex: auto !important; /* Equal to flex: 1 1 auto !important; as per the spec */
 }
 
 .flex-none {
-  flex: none; /* Equal to flex: 0 0 auto; as per the spec */
+  flex: none !important; /* Equal to flex: 0 0 auto !important; as per the spec */
 }
 
 .flex-1-1-auto {
-  flex: 1 1 auto;
+  flex: 1 1 auto !important;
 }
 
 .flex-1-0-auto {
-  flex: 1 0 auto;
+  flex: 1 0 auto !important;
 }
 
 .flex-0-1-auto {
-  flex: 0 1 auto;
+  flex: 0 1 auto !important;
 }
 
 .flex-0-0-auto {
-  flex: 0 0 auto;
+  flex: 0 0 auto !important;
 }
 
 .justify-content-flex-start {
-  justify-content: flex-start;
+  justify-content: flex-start !important;
 }
 
 .justify-content-flex-end {
-  justify-content: flex-end;
+  justify-content: flex-end !important;
 }
 
 .justify-content-center {
-  justify-content: center;
+  justify-content: center !important;
 }
 
 .justify-content-space-between {
-  justify-content: space-between;
+  justify-content: space-between !important;
 }
 
 .justify-content-space-around {
-  justify-content: space-around;
+  justify-content: space-around !important;
 }
 
 .align-content-flex-start {
-  align-content: flex-start;
+  align-content: flex-start !important;
 }
 
 .align-content-flex-end {
-  align-content: flex-end;
+  align-content: flex-end !important;
 }
 
 .align-content-center {
-  align-content: center;
+  align-content: center !important;
 }
 
 .align-content-space-between {
-  align-content: space-between;
+  align-content: space-between !important;
 }
 
 .align-content-space-around {
-  align-content: space-around;
+  align-content: space-around !important;
 }
 
 .align-content-stretch {
-  align-content: stretch;
+  align-content: stretch !important;
 }
 
 .align-items-flex-start {
-  align-items: flex-start;
+  align-items: flex-start !important;
 }
 
 .align-items-flex-end {
-  align-items: flex-end;
+  align-items: flex-end !important;
 }
 
 .align-items-center {
-  align-items: center;
+  align-items: center !important;
 }
 
 .align-items-baseline {
-  align-items: baseline;
+  align-items: baseline !important;
 }
 
 .align-items-stretch {
-  align-items: stretch;
+  align-items: stretch !important;
 }
 
 .align-self-flex-start {
-  align-self: flex-start;
+  align-self: flex-start !important;
 }
 
 .align-self-flex-end {
-  align-self: flex-end;
+  align-self: flex-end !important;
 }
 
 .align-self-center {
-  align-self: center;
+  align-self: center !important;
 }
 
 .align-self-baseline {
-  align-self: baseline;
+  align-self: baseline !important;
 }
 
 .align-self-stretch {
-  align-self: stretch;
+  align-self: stretch !important;
 }
