--- a/src/styl/general.styl
+++ b/src/styl/general.styl
@@ -35,6 +35,10 @@
     flex 1
     margin 0
 
+.section__edit-btn
+  max-width 95px
+  margin-right 100px
+
 .transfer-via .section__field .select,
 .transfer-via .section__field .vertical-inputs,
 .transfer-via .section__field .input
@@ -76,3 +80,24 @@
 .calendar-icon
   max-height 28px
   padding: 3px 5px
+
+.section__detail-box
+  flex 2
+  padding 15px
+  background #fff
+  border solid 1px #d8d8d8
+
+.client-info .right-column .section__detail-box
+  flex 1
+  width 195px
+  padding 5px
+
+.client-info .right-column .section__field:last-child
+  padding-top 10px
+
+.client-info .right-column .section__detail-box textarea
+  width 100%
+
+#zip-address,
+#client-address
+  font-size 12px
