added card and dealer information of transfer 3 form and removed extra comments

--- a/src/styl/general.styl
+++ b/src/styl/general.styl
@@ -101,3 +101,17 @@
 #zip-address,
 #client-address
   font-size 12px
+
+.boxes
+  display: grid
+  grid-gap: 1rem
+  grid-template-columns: repeat(auto-fill,minmax(15rem,1fr))
+
+.car-info, .car-info td, .car-info th
+  background transparent
+  border none
+
+.car-info td
+  width 25%
+  padding 5px 0
+  font-size 13px
