added current owner info table

--- a/src/styl/general.styl
+++ b/src/styl/general.styl
@@ -107,11 +107,17 @@
   grid-gap: 1rem
   grid-template-columns: repeat(auto-fill,minmax(15rem,1fr))
 
+
+.dealer-info-table, .dealer-info-table td, .dealer-info-table th,
 .car-info, .car-info td, .car-info th
   background transparent
   border none
 
+.dealer-info-table td,
 .car-info td
   width 25%
   padding 5px 0
   font-size 13px
+
+.dealer-info-table td
+  vertical-align top
