--- a/src/styl/general.styl
+++ b/src/styl/general.styl
@@ -98,6 +98,20 @@
 .client-info .right-column .section__detail-box textarea
   width 100%
 
+.find-licence:focus,
+.find-licence:hover,
+.find-licence
+  display block
+  margin-right -28px
+  width 40px
+  flex 0
+  border none
+  background transparent url("/images/loupe.svg") no-repeat
+  background-size 18px
+  background-position center
+  z-index 9999
+
+
 #zip-address,
 #client-address
   font-size 12px
@@ -158,8 +172,10 @@
 .transaction-rights-table > tbody th
   background #f8f9fa
 
+.transaction-rights-table tfoot
+  font-weight 500
+
 .transaction-rights-table td.transaction-total
   text-align right
-  font-weight 500
   text-transform uppercase
   line-height 24px
