--- a/src/turret/utility/text-align.css
+++ b/src/turret/utility/text-align.css
@@ -1,15 +1,15 @@
 .text-align-left {
-  text-align: left;
+  text-align: left !important;
 }
 
 .text-align-right {
-  text-align: right;
+  text-align: right !important;
 }
 
 .text-align-justify {
-  text-align: justify;
+  text-align: justify !important;
 }
 
 .text-align-center {
-  text-align: center;
+  text-align: center !important;
 }
